# projekt-aizo

./: BinaryInsertionSort.cpp  BinaryInsertionSort.h  BubbleSort.h  CMakeLists.txt  HeapSort.h  InsertionSort.h  MergeSort.cpp  MergeSort.h  QuickSort.h  SortAlgorithm.cpp  SortAlgorithm.h  main.cpp
